# smashboard

./: SFX_Board_PRD_Tauri.md  SFX_Board_Task_Breakdown.md  package-lock.json  package.json  remote.html  vite.config.ts
.omx/: metrics.json
.omx/state/: current-task-baseline.json  hud-state.json  notify-fallback-state.json  notify-hook-state.json  session.json  skill-active-state.json  subagent-tracking.json  tmux-hook-state.json  update-check.json
scripts/: build-app.ps1  build-portable.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/audio/: decoder.rs  engine.rs  mixer.rs  mod.rs
src-tauri/src/autosave/: mod.rs
src-tauri/src/commands/: export_commands.rs  mod.rs  project_commands.rs  recording_commands.rs  remote_commands.rs  shortcut_commands.rs  slot_commands.rs  timeline_commands.rs  undo_commands.rs
src-tauri/src/export/: mod.rs
src-tauri/src/models/: mod.rs  project.rs  recording.rs  slot.rs  timeline.rs
src-tauri/src/project/: mod.rs
src-tauri/src/recording/: engine.rs  mod.rs  shortcut_manager.rs
src-tauri/src/remote/: mod.rs
src-tauri/src/timeline/: mod.rs  playback.rs  state.rs
src-tauri/src/undo/: mod.rs
src/components/: ExportDialog.tsx  GlobalShortcutToggle.tsx  KeyboardShortcuts.tsx  MissingFilesDialog.tsx  ProjectMenu.tsx  RecordingTransport.tsx  ShortcutInput.tsx  SlotCard.tsx  SlotGrid.tsx  StatusBar.tsx  Toast.tsx
src/hooks/: useSlots.ts
src/remote/: RemoteApp.tsx  main.tsx  remote.css
src/types/: index.ts
src/utils/: shortcut.ts  slotIcons.ts
(+7 files in other folders)
