[package]
name = "sfx-board"
version = "0.1.0"
description = "SFX Board desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.18"
hound = "3.5"
minimp3 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
